- Put HomeFrame inside of containing element - Troubleshoot style issue with overflowing HTML and Body tag - delete unnecessary styles

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,4 +1,4 @@
-:root {}
+// :root {}
 
 /* @media (prefers-color-scheme: dark) {
 	:root {
@@ -32,8 +32,9 @@
 
 // html,
 // body {
+// 	height: 100%;
 // 	max-width: 100vw;
-// 	overflow-x: hidden;
+// 	overflow: hidden;
 // }
 
 
